[package]
name = "sptth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
hickory-proto = "0.25"
http = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
toml = "0.9"
