[package]
name = "sptth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
homedir = "0.3"
axum = "0.8"
hickory-proto = "0.25"
http = "1.3"
hyper = { version = "1.8", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
tokio-rustls = "0.26"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
toml = "0.9"
tower = { version = "0.5", features = ["util"] }
time = "0.3"

[dev-dependencies]
tempfile = "3"
